--- a/manuscript.html
+++ b/manuscript.html
@@ -136,7 +136,6 @@
   <meta name="citation_technical_report_institution" content="Manubot" />
   <meta name="citation_author" content="The yt Project" />
   <meta name="citation_author_institution" content="NumFOCUS" />
-  <meta name="citation_author_orcid" content="XXXX-XXXX-XXXX-XXXX" />
   <meta name="twitter:creator" content="@yt_astro" />
   <meta name="citation_author" content="Matthew Turk" />
   <meta name="citation_author_institution" content="School of Information Sciences, University of Illinois at Urbana-Champaign" />
@@ -207,9 +206,9 @@
   <meta name="citation_fulltext_html_url" content="https://yt-project.github.io/yt-4.0-paper/" />
   <meta name="citation_pdf_url" content="https://yt-project.github.io/yt-4.0-paper/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://yt-project.github.io/yt-4.0-paper/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://yt-project.github.io/yt-4.0-paper/v/dae4bbcfd65118e36e0280b7b5894c325f0bc167/" />
-  <meta name="manubot_html_url_versioned" content="https://yt-project.github.io/yt-4.0-paper/v/dae4bbcfd65118e36e0280b7b5894c325f0bc167/" />
-  <meta name="manubot_pdf_url_versioned" content="https://yt-project.github.io/yt-4.0-paper/v/dae4bbcfd65118e36e0280b7b5894c325f0bc167/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://yt-project.github.io/yt-4.0-paper/v/958bc5d4e7dc984fefbf52988269183d29bda9ac/" />
+  <meta name="manubot_html_url_versioned" content="https://yt-project.github.io/yt-4.0-paper/v/958bc5d4e7dc984fefbf52988269183d29bda9ac/" />
+  <meta name="manubot_pdf_url_versioned" content="https://yt-project.github.io/yt-4.0-paper/v/958bc5d4e7dc984fefbf52988269183d29bda9ac/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -265,21 +264,44 @@
 
     // https://paperjs.org/
 </script>
+<!--
+  vega-lite Plugin (third-party) 
+  
+  Allows you to use a declarative grammar to describe interactive visualizations.
+  See https://vega.github.io/
+-->
+
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/vega/5.22.0/vega.min.js"
+  integrity="sha512-joOH8OWtFZARB3BwtOpZA07Leh8g6lRL2TtpURT2u6qZUQpYHux5e54v4saIQ7VAhnLRL3xHplO48eF/7Li5NA=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+></script>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/vega-lite/5.2.0/vega-lite.min.js"
+  integrity="sha512-GPC1fKIzfK/w1ufw45IkI0Wz+CKgz/VqiCsG0JYNG3Cbr7MDz0pbRzUFpluU878tZ0wZeDRScHhIFm9oDtMydQ=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+></script>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/vega-embed/6.20.8/vega-embed.min.js"
+  integrity="sha512-gDoPz1IHkL4uyxS/lm91VeojC0u8Y1sg1CRd3mQKgUgKzrwzmpX0X3olKP0r3O6tyQFSDnsw3MGZCPDkWObvUQ=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+></script>
 <header id="title-block-header">
 <h1 class="title">Introducing yt 4.0: Analysis and Visualization of Volumetric Data</h1>
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://yt-project.github.io/yt-4.0-paper/v/dae4bbcfd65118e36e0280b7b5894c325f0bc167/">permalink</a>)
+(<a href="https://yt-project.github.io/yt-4.0-paper/v/958bc5d4e7dc984fefbf52988269183d29bda9ac/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/yt-project/yt-4.0-paper/tree/dae4bbcfd65118e36e0280b7b5894c325f0bc167">yt-project/yt-4.0-paper@dae4bbc</a>
+from <a href="https://github.com/yt-project/yt-4.0-paper/tree/958bc5d4e7dc984fefbf52988269183d29bda9ac">yt-project/yt-4.0-paper@958bc5d</a>
 on April 11, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>The yt Project</strong><br>
-<img src="images/orcid.svg" class="inline_icon" width="16" height="16" alt="ORCID icon" />
-<a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a>
 · <img src="images/github.svg" class="inline_icon" width="16" height="16" alt="GitHub icon" />
 <a href="https://github.com/yt-project">yt-project</a>
 · <img src="images/twitter.svg" class="inline_icon" width="16" height="16" alt="Twitter icon" />
@@ -526,7 +548,7 @@ Closing bug reports – and the development work associated with identifying, tr
 <p>We include here plots of the level of engagement on mailing list discussions and the citation count of the original method paper.</p>
 <h3 id="governance">Governance</h3>
 <p>Between the publication of the first paper and this paper, the <code>yt</code> project instituted a form of governance involving a steering committee, a set of “members” of the project, and a defined process for developing improvements and enhancements (the YTEP, or <code>yt</code>-enhancement-proposal process).
-YTEPs are discussed in [sec:ytep].
+YTEPs are discussed in <a href="#sec:ytep">1.3.6</a>.
 The systems developed account for a number of important procedures, mostly related to decision-making, but do not address pressing community needs such as community standards for conduct, changes in committee composition, sub-project coordination, or the transition of members and developers to “emeritus” status.</p>
 <h2 id="sec:development">Development Procedure</h2>
 <p><code>yt</code> is developed openly.
@@ -541,7 +563,7 @@ For instance, during the development of <code>yt</code> 4.0, the branch <code>yt
 <p>This three-pronged approach generally has suited the community; the process of backporting changes from the “main” branch to the “stable” branch can be time-consuming.
 However, balancing the needs of a community requiring stable methods for analyzing data against the ease of development suggests that this is a toll worth paying.</p>
 <p>In general, the development of <code>yt</code> is reasonably top-heavy, with the majority of contributions coming from a core group of individuals.
-We discuss the implications of this on sustainability in Section [sec:sustainability], and provide here a graph of the contributions over time.</p>
+We discuss the implications of this on sustainability in Section <a href="#sec:sustainability">1.18</a>, and provide here a graph of the contributions over time.</p>
 <div id="figure-commit-graph">
 
 </div>
@@ -1065,9 +1087,9 @@ Additionally, by providing some routines as options, we can in some instances sp
 <li><code>select_bbox_edge(lower_left, upper_right)</code>: This is a special-case of the bounding box routine that provides information as to whether or not the <em>entire</em> bounding box is included or just a <em>partial</em> portion of the bounding box.</li>
 </ul>
 <p>We demonstrate a handful of selection operations on a low-resolution dataset below.
-In Figure <a href="#fig:reg2">2</a> we illustrate the selection of a rectangular prism (i.e., a <code>region</code>, like in Section [sec:dobj-region].
-In Figure <a href="#fig:sp2">3</a>, we illustrate the selection of a sphere (i.e., a <code>sphere</code>, like in Section [sec:dobj-sphere].
-And, to demonstrate yt’s ability to construct boolean selectors from these objects (i.e., Section [sec:dobj-bool] we show what the logical <code>NOT</code> of these two objects would produce in <a href="#fig:reg2_not_sp2">4</a>.</p>
+In Figure <a href="#fig:reg2">2</a> we illustrate the selection of a rectangular prism (i.e., a <code>region</code>, like in Section <a href="#sec:dobj-region">1.5.2.17</a>.
+In Figure <a href="#fig:sp2">3</a>, we illustrate the selection of a sphere (i.e., a <code>sphere</code>, like in Section <a href="#sec:dobj-sphere">1.5.2.20</a>.
+And, to demonstrate yt’s ability to construct boolean selectors from these objects (i.e., Section <a href="#sec:dobj-bool">1.5.2.2</a> we show what the logical <code>NOT</code> of these two objects would produce in <a href="#fig:reg2_not_sp2">4</a>.</p>
 <div id="fig:reg2" class="fignos">
 <figure>
 <img src="images/selectors/reg2.svg" alt="Figure 2: A selection of data in a low-resolution simulation from a rectangular prism." />
@@ -1759,9 +1781,9 @@ Those cells with collisions at the level of the refined index (purple cells in p
 This means that any given selection is less likely to contain a collision and it will be less likely for a selector to require both files to be loaded unless it actually touches data from both files.</p>
 <p>Increasing the order of the coarse index has the same effect as nesting a second refined index within cells with collisions, but can also increases the size of the resulting map and the time it takes to identify files touched by a selection.
 However, if the order of the coarse index is too small or the order of the refined index too large, this too can increase the cost of a selection in terms of memory and time.
-Section [sec:test_order] discusses this tradeoff and how to choose index orders.</p>
+Section <a href="#sec:test_order">1.9.2.1</a> discusses this tradeoff and how to choose index orders.</p>
 <p>Collisions are more common for file partitioning schemes that are not localized.
-Figure <a href="#fig:collision_files">14</a> shows an example of collisions for the different partitioning schemes discussed in Section [sec:decomp].</p>
+Figure <a href="#fig:collision_files">14</a> shows an example of collisions for the different partitioning schemes discussed in Section ??.</p>
 <div id="fig:collision_files" class="fignos">
 <figure>
 <img src="images/bitmap/index.png" alt="Figure 14: Examples of collisions for four different domain partitioning schemes. The heavy black lines denote 1st order Morton cells. The presence of more that one file (color) within a Morton cell indicates a collision. NOTE: from an accessibility standpoint, I must note that using a smooth color gradient may be counter productive for colorblind readers as it makes it a lot harder to perveice that neighbouring regions belong to different files." />
@@ -1796,7 +1818,7 @@ Different partitioning schemes will lead to different numbers of ghost files.
 However, due to differences in how the domain was partitioned between the files in the four cases, the number of additional ghost files touched by the ghost zone in each case is different.
 This will also depend on the order of the index to which ghost zones are added.
 Ghost zones added at the order of the coarse index will be larger than those added at the order of the refined index and will have a higher probability of touching additional files.
-While including ghost zones is advantageous when neighbor info is needed, it also increases the computational cost of identifying files (see Section [sec:tests]).</p>
+While including ghost zones is advantageous when neighbor info is needed, it also increases the computational cost of identifying files (see Section <a href="#sec:tests">1.9.2</a>).</p>
 <h3 id="sec:methods">Methods</h3>
 <p>The basic procedure for constructing the bitmap index is as follows:</p>
 <ol type="1">
@@ -1856,7 +1878,7 @@ For each test a Morton index bitmap was constructed for the dataset and used to 
 The performance is assessed in terms of the number of files identified and the average time required to identify them across 10 runs.
 If fewer files are touched, fewer files will need to be loaded during analysis of a selected region and the overall fraction of time spent on I/O will be lower.
 If less time is required to identify the files touched by a given selector, more selections can be made using the same computational resources.
-This was done for varying index orders (Section [sec:test_order]), selector sizes (Section [sec:test_size]), and partitions of the domain between files (Section [sec:test_decomp]).</p>
+This was done for varying index orders (Section <a href="#sec:test_order">1.9.2.1</a>), selector sizes (Section <a href="#sec:test_size">1.9.2.4</a>), and partitions of the domain between files (Section <a href="#sec:test_decomp">1.9.2.5</a>).</p>
 <h4 id="sec:test_order">Index Order</h4>
 <h4 id="sec:test_order1">Overall Refinement</h4>
 <p>The order of the Morton indices used to map the files determines the time required to identify files and the number of collisions that will occur between files.
@@ -1877,16 +1899,16 @@ However, as the order increases, the number of collisions drops and the file cou
 This translates to a <span class="math inline">\(\sim75\)</span>% reduction in the memory and time required for processing files, a significant increase in performance.
 For a 7th order bitmap index, selection requires <span class="math inline">\(&gt;100\times\)</span> the time that the same selection took using a 6th order index, but there is no change in the number of files indicated.
 A 6th order index is sufficient to identify the minimal set of files touched by the selectors in this case because the dataset was partitioned between the files along a 6th order Hilbert space filling curve.
-While it is generally true that the time required to identify files using a bitmap index will increase exponentially with the size of the index, the order of the index that results in the minimal number of files for any dataset will depend upon how the domain is partitioned between files (see Section [sec:test_decomp]).
+While it is generally true that the time required to identify files using a bitmap index will increase exponentially with the size of the index, the order of the index that results in the minimal number of files for any dataset will depend upon how the domain is partitioned between files (see Section <a href="#sec:test_decomp">1.9.2.5</a>).
 The memory required to store the index for the test dataset scales according to <span class="math inline">\(\propto2^{2k}\)</span>, for a <span class="math inline">\(k^{\mbox{th}}\)</span> order index.
 If uncompressed bitmaps had been used instead of EWAH compressed bitmap, the memory would have scaled with the total number of cells contained within the 3-dimensional test domain (<span class="math inline">\(2^{3k}\)</span>).</p>
 <h4 id="sec:test_order2">Collision Refinement</h4>
-<p>Increasing the refinement of the primary index does so for the entire domain and, as seen in Section [sec:test_order1], can become costly in terms of the memory required to store the bitmap and the time required to perform operations.
+<p>Increasing the refinement of the primary index does so for the entire domain and, as seen in Section <a href="#sec:test_order1">1.9.2.2</a>, can become costly in terms of the memory required to store the bitmap and the time required to perform operations.
 However, it is also possible to increase refinement by nesting a second Morton bitmap index within those cells of the primary index that contain collisions.
 As the nested indexes will contain a smaller portion of the domain and data, they will be less complex and can be compressed more efficiently than the primary index covering the entire domain.
 This enhanced compression means that, although a greater overall number of EWAH compressed bitmaps will need to be utilized (one for the coarse index and one for each collision within the coarse index), less space will be needed to store the bitmap and bitwise operations will be faster.
 Figure <a href="#fig:test_order2">17</a> shows the results for adding a secondary index of varying order with the overall refinement order of the index (primary index order + secondary index order) held constant at 6.
-The test dataset and selectors applied were the same as in Section [sec:test_order1].</p>
+The test dataset and selectors applied were the same as in Section <a href="#sec:test_order1">1.9.2.2</a>.</p>
 <div id="fig:test_order2" class="fignos">
 <figure>
 <img src="images/bitmap/vary_order2_to6.png" alt="Figure 17: Dependence of query time (top), fraction of files selected/cells with collisions (middle), and memory required to store the index (bottom) on the order of the secondary index used to refine collisions. In the middle panel, the solid black line corresponds with the fraction of files identified, the dash-dotted blue line is the fraction of cells at the first index level that have collisions, and the dotted red line is the fraction of cells at the second index level that have collisions." />
@@ -1908,7 +1930,7 @@ However, if a datasetwere less uniform with concentrations of points, the optima
 <p>The time required to identify files touched by a selection will also depend upon the size of the region being selected.
 Larger selectors will intersect more indices and more files, resulting in more bitmap operations.
 Figure <a href="#fig:test_size">18</a> shows the result from varying the selector size.
-The same test datasetfrom Section [sec:test_order] was used.
+The same test datasetfrom Section <a href="#sec:test_order">1.9.2.1</a> was used.
 A bitmap index with a 4th order primary Morton index and 2nd order secondary Morton index was used in all cases.
 Each cube selector was placed at the center of the domain and scaled along each dimension to some fraction of the total domain.</p>
 <div id="fig:test_size" class="fignos">
@@ -1929,11 +1951,11 @@ If the selector edge is near a file boundary, ghost zones have the potential to 
 For such a highly ordered dataset, the ghost zones will only identify additional files for selectors that are nearing the edges of file boundaries.
 However, queries including ghost zones require slightly more time even when this is not the case.</p>
 <h4 id="sec:test_decomp">Domain Partitioning</h4>
-<p>As discussed in Section [sec:decomp], a bitmap index is more effective in cases where the domain is partitioned between files in a localized way.
+<p>As discussed in Section ??, a bitmap index is more effective in cases where the domain is partitioned between files in a localized way.
 If files contain non-contiguous parts of the domain, contiguous selections will require more files to be loaded.
 Figure <a href="#fig:test_decomp">19</a> shows results for four different partitioning schemes.
 All four data sets cover the same three-dimensional domain with <span class="math inline">\(1024^3\)</span> points split across 512 files.
-The Hilbert dataset is the same one used in previous tests (see Section [sec:test_order] for a description).
+The Hilbert dataset is the same one used in previous tests (see Section <a href="#sec:test_order">1.9.2.1</a> for a description).
 The Morton dataset is constructed in a similar way to the Hilbert dataset with file partitions occurring along a 6th order Morton curve and including a 10% scatter of points between Morton cells.
 The sliced dataset is partitioned in slices along one dimension with 10% scatter of points between adjacent slices.
 Files in the random dataset contain a random sample of points, uniformly distributed across the domain.</p>
@@ -5624,30 +5646,5 @@ Connecting this to the raw, unprocessed data from the simulation (such as the un
     margin-right: 60px !important;
   }
 </style>
-<!--
-  vega-lite Plugin (third-party) 
-  
-  Allows you to use a declarative grammar to describe interactive visualizations.
-  See https://vega.github.io/
--->
-
-<script
-  src="https://cdnjs.cloudflare.com/ajax/libs/vega/5.22.0/vega.min.js"
-  integrity="sha512-joOH8OWtFZARB3BwtOpZA07Leh8g6lRL2TtpURT2u6qZUQpYHux5e54v4saIQ7VAhnLRL3xHplO48eF/7Li5NA=="
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer"
-></script>
-<script
-  src="https://cdnjs.cloudflare.com/ajax/libs/vega-lite/5.2.0/vega-lite.min.js"
-  integrity="sha512-GPC1fKIzfK/w1ufw45IkI0Wz+CKgz/VqiCsG0JYNG3Cbr7MDz0pbRzUFpluU878tZ0wZeDRScHhIFm9oDtMydQ=="
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer"
-></script>
-<script
-  src="https://cdnjs.cloudflare.com/ajax/libs/vega-embed/6.20.8/vega-embed.min.js"
-  integrity="sha512-gDoPz1IHkL4uyxS/lm91VeojC0u8Y1sg1CRd3mQKgUgKzrwzmpX0X3olKP0r3O6tyQFSDnsw3MGZCPDkWObvUQ=="
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer"
-></script>
 </body>
 </html>
